# recreational-programming-stuff

./: Algo1.ipynb  Bipartie_Graph.c  Continuous_Sort.ipynb  Matrix_Chain_Multiplication.py  README.md  README.md.bak  Travelling_Salesperson_Problem.py  hello.py  hello.zig  merge_sort.ipynb  note.txt  plotit.py  tempo.c
.ipynb_checkpoints/: Algo2-checkpoint.ipynb  Travelling_Salesperson_Problem-checkpoint.ipynb  remove_this-checkpoint.ipynb  savedb-checkpoint.py
A-BUNCH-OF-ABSOLUTE-GARBAGE/: lists.cpp  lists.hpp  main.c
Boolean_expression_evaluator_and_truth_table_generator/: test.txt  tools.c
Gaussian-Elimination/: README.md  a.out  examples.c  inconsistent_example.c  main.c  new_test_zero_at_zero_zero  new_test_zero_at_zero_zero_DECOMPILED.c  old_test_zero_at_zero_zero  solve.c  solve.h
SQL_PROJECT/: ADMIN_LOGIN.py  Admin_Login.ui  BOOK.py  BOOK.ui  Passenger_Login.py  Passenger_Login.ui  TESTOS.py  database.sql  deletedb.py  deletedb.ui  saveAIR.py  saveAIR.ui  saveAIRLINE.py  saveAIRPORT.py  saveAIRPORT.ui  saveCONTAIN.py  saveCONTAINS.py  saveCONTAINS.ui  saveEMPLOYEE.py  saveEmp.py  saveEmp.ui  saveFLIGHTS.py  saveFLIGHTS.ui  saveFlights.py  savePASSENGER.py  savePASSENGER.ui  savePass.py  savedb.py  table.py  table.py.bak  table.ui  table.ui.bak  updateAIR.py  updateAIR.ui  updateAIRLINE.py  updateAIRPORT.py  updateEMP.py  updateEMPLOYEE.py  updateEMPLOYEE.ui  updateFLIGHTS.py  (+6 more)
booltable/: 234app  (+11 more)
learning-to-code/gtk-tutorial/: CMakeLists.txt  compile_commands.json  main.c
learning-to-code/gtk-tutorial/.cache/clangd/index/: main.c.51D1FDC0D272B138.idx
(+689 files in other folders)
